// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 1`] = `
{
  "c1": "C1",
  "c2": "C2",
  "com1": "COM1",
  "db": "Custom rationale ({{db}})",
  "f1": "F1",
  "f10": "F10",
  "f2": "F2",
  "f3": "F3",
  "f4": "F4",
  "f6": "F6",
  "f7": "F7",
  "f8": "F8",
  "f9": "F9",
  "g1": "G1",
  "g10": "G10",
  "g11": "G11",
  "g2": "G2",
  "g3": "G3",
  "g4": "G4",
  "g5": "G5",
  "g6": "G6",
  "g7": "G7",
  "g8": "G8",
  "ga1": "GA1",
  "ga2": "GA2",
  "t1": "T1",
  "t2": "T2",
  "u1": "U1",
  "u2": "U2",
  "u3": "U3",
}
`;

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 2`] = `
[
  "db",
  "g1",
  "g2",
  "g3",
  "g4",
  "g5",
  "g6",
  "g7",
  "g8",
  "g10",
  "g11",
  "u1",
  "u2",
  "u3",
  "f1",
  "f2",
  "f3",
  "f4",
  "f6",
  "f7",
  "f8",
  "f9",
  "f10",
  "c1",
  "c2",
  "t1",
  "t2",
  "ga1",
  "ga2",
  "com1",
]
`;

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 3`] = `
{
  "c1": "C1",
  "c2": "C2",
  "com1": "COM1",
  "db": "Custom rationale ({{db}})",
  "f1": "F1",
  "f10": "F10",
  "f2": "F2",
  "f3": "F3",
  "f4": "F4",
  "f6": "F6",
  "f7": "F7",
  "f8": "F8",
  "f9": "F9",
  "g1": "G1",
  "g10": "G10",
  "g11": "G11",
  "g2": "G2",
  "g3": "G3",
  "g4": "G4",
  "g5": "G5",
  "g6": "G6",
  "g7": "G7",
  "g8": "G8",
  "ga1": "GA1",
  "ga2": "GA2",
  "t1": "T1",
  "t2": "T2",
  "u1": "U1",
  "u2": "U2",
  "u3": "U3",
}
`;

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 4`] = `
[
  "db",
  "g1",
  "g2",
  "g3",
  "g4",
  "g5",
  "g6",
  "g7",
  "g8",
  "g10",
  "g11",
  "u1",
  "u2",
  "u3",
  "f1",
  "f2",
  "f3",
  "f4",
  "f6",
  "f7",
  "f8",
  "f9",
  "f10",
  "c1",
  "c2",
  "t1",
  "t2",
  "ga1",
  "ga2",
  "com1",
]
`;

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 5`] = `
{
  "c1": "C1",
  "c2": "C2",
  "com1": "COM1",
  "db": "Custom rationale ({{db}})",
  "f1": "F1",
  "f10": "F10",
  "f2": "F2",
  "f3": "F3",
  "f4": "F4",
  "f5": "F5",
  "f6": "F6",
  "f7": "F7",
  "f8": "F8",
  "f9": "F9",
  "g1": "G1",
  "g10": "G10",
  "g11": "G11",
  "g2": "G2",
  "g3": "G3",
  "g4": "G4",
  "g5": "G5",
  "g6": "G6",
  "g7": "G7",
  "g8": "G8",
  "ga1": "GA1",
  "ga2": "GA2",
  "t1": "T1",
  "t2": "T2",
  "u1": "U1",
  "u2": "U2",
  "u3": "U3",
}
`;

exports[`modules/twinkleconfig Twinkle.config global variables Should match snapshot 6`] = `
[
  "db",
  "g1",
  "g2",
  "g3",
  "g4",
  "g5",
  "g6",
  "g7",
  "g8",
  "g10",
  "g11",
  "u1",
  "u2",
  "u3",
  "f1",
  "f2",
  "f3",
  "f4",
  "f5",
  "f6",
  "f7",
  "f8",
  "f9",
  "f10",
  "c1",
  "c2",
  "t1",
  "t2",
  "ga1",
  "ga2",
  "com1",
]
`;
